overflow-x fix

--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,12 @@
 
 /* General styles */
 
+
 html {
     scroll-behavior: smooth;
     height: 100%;
     margin: 0;
+    overflow-x: hidden;
 }
 
 body {
@@ -55,7 +57,14 @@ body {
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
+    overflow-x: hidden; 
 
+}
+
+.site{
+    overflow-x: hidden;
+    position: relative;
+    width: 100%;
 }
 
 section {
@@ -105,6 +114,9 @@ strong {
 }
 
 /* Scroll down button */
+html{
+    scroll-behavior: smooth;
+}
 
 .scroll-down {
     opacity: 1;
@@ -279,16 +291,12 @@ label.logo {
     }
 }
 
-@media(max-width:900px){
-    .nav__list{
-        width: 55%;
-    }
-}
 
-@media(max-width:800px){
+@media screen and (max-width:915px){
     body{
         overflow-x: hidden;
     }
+    
     .nav__list{
         position: absolute;
         right: 0px;
@@ -318,17 +326,17 @@ label.logo {
 }
 
 .nav-active{
-    transform: translateX(0%);
+    transform: translateX(0);
 }
 
 @keyframes navLinkFade{
     from{
         opacity: 0;
-        transform: translateX(50px);
+        /* transform: translateX(50px); */
     }
     to{
         opacity: 1;
-        transform: translateX(0px);
+       /*  transform: translateX(0px); */
     }
 }
 
